cowsay-config/cowsay-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cowsay-server
  labels:
    app: cowsay-server
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cowsay-server
